--- a/src/Body/Body.module.css
+++ b/src/Body/Body.module.css
@@ -1,6 +1,6 @@
 .bodyContainer {
   width: 100%;
-  height: 100%;
+  height: fit-content;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -47,6 +47,10 @@
 
 .bodyMobile {
   display: none;
+}
+
+.grey {
+  filter: grayscale(100%);
 }
 
 @media only screen and (max-width: 1400px){
