--- a/src/FaviconBar/FaviconBar.module.css
+++ b/src/FaviconBar/FaviconBar.module.css
@@ -5,7 +5,6 @@
   right: 20px;
   padding: 20px 0;
   z-index: 4;
-  height: 464px;
 }
 
 .faviconBar ul {
@@ -18,6 +17,11 @@
   justify-content: space-around;
 }
 
+.faviconBar li {
+  margin: 0;
+  padding: 30px 0;
+}
+
 .faviconButton {
   background-color: rgb(153, 153, 153);
   border-radius: 12px;
@@ -25,6 +29,7 @@
   padding: 0;
   cursor: pointer;
   outline-offset: 4px;
+  filter: grayscale(100%);
 }
 .buttonFront {
   display: block;
@@ -41,10 +46,9 @@
 
 @media only screen and (max-width: 1100px) {
   .faviconBar {
-    /* position: static; */
+    position: static;
     top: auto;
-    right: unset;
-    bottom: 0;
+    right: auto;
     width: 100%;
     height: 88px;
   }
