--- a/src/Footer/Footer.module.css
+++ b/src/Footer/Footer.module.css
@@ -1,5 +1,5 @@
 .footer {
-  position: fixed;
+  margin-top: auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -7,20 +7,18 @@
   color: whitesmoke;
   text-shadow: 0 1px 0px rgb(134, 134, 134);
   font-size: 1em;
-  padding-bottom: 10px;
-  bottom: 0;
+  padding: 10px 0;
 }
 
 .footer a {
   text-decoration: none;
   color: whitesmoke;
-  padding: 0 20px 0 0;
   margin: 0;
+  padding: 0 20px 0 0;
 }
 
 .footer p {
-  margin: 0;
-  padding: 0 0 0 20px;
+  padding-left: 20px;
 }
 
 @media only screen and (max-width: 600px) {
